2000-02-08  Akim Demaille  <akim@epita.fr>

	Clean up a bit the user interface.

	* autoconf.sh: Give your name while reporting errors.
	Don't spit --help for errors on arguments.
	* autoreconf.sh: Likewise.
	* autoheader.sh: Likewise.
	More temporary files that one can browse when debugging.
	Don't ${var}, just $var.
	Don't dump --help when the arguments are invalid.
	(config_h): Use the empty value instead of `undefined' to check
	that it is defined.
	* acspecific.m4: Formatting changes.

2000-02-08  Akim Demaille  <akim@epita.fr>

	Introduce name spaces in libm4.

	* libm4.m4 (m4_namespace_push, m4_namespace_pop,
	m4_namespace_define, define, m4_disable, m4_enable, m4_rename):
	New macros.
	(_m4_foreach, _m4_for, m4_wrap): Use m4_define for temporaries.
	(m4_split): Don't mess with the quotes.

	* acgeneral.m4 (AC_OUTPUT_MAKE_DEFS, AC_OUTPUT_HEADERS): Quote
	`define'.

2000-02-08  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Introduction): m4 1.4 is now required.
	(Invoking autoconf): A better help on --trace.
	(Defining Symbols): Advocate a proper use of the quotes in m4
	code, including if the quotes are sometimes useless.  It is bad,
	very bad not to quote properly, so quote all the examples
	properly.
	(Cache Files): Use a unary call to define, instead of an empty
	$2.
	(Using System Type): Watch out TeX wrapping.
	(Pretty Help Strings): Don't give too long a snippet of --help.
	Promote the coding style of Autoconf.  Quote properly.

2000-02-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_PRO): Use AC_PROVIDE instead of defining
	yourself.  This allows to see everything that is AC_PROVIDEd via
	autoconf --trace.
	(AC_SPECIALIZE): define'd, not AC_DEFUN'd.
	(AC_PROVIDE): Use define with a single arg, instead of an empty $2.

2000-02-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (ac_includes_default): Don't use simple quotes, but
	doubles quotes if you want to use \-continuation lines: this is
	not recognized by MIPS' sh.
